src/infra/configs/envoy/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kube-gateway
  namespace: envoy-gateway
spec:
  gatewayClassName: envoy
  listeners:
    - name: https-id
      port: 443
      protocol: HTTPS
      hostname: id.lxft.dev
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: authelia-tls

    - name: https-git
      port: 443
      protocol: HTTPS
      hostname: git.lxft.dev
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: forgejo-tls
